styled login and signup pages

--- a/src/Utilities/_variables.scss
+++ b/src/Utilities/_variables.scss
@@ -1,4 +1,14 @@
 $mainBlue: #47b8ff;
 $secondaryBlue: #87dbff;
+
+// Light mode
 $lightModeGrey: #8ab5d3;
 $lightModeGrey20: rgba(138, 180, 211, 0.2);
+$lightModeWhite: rgba(255, 255, 255, 1);
+$lightModeWhite50: rgba(255, 255, 255, 0.5);
+$lightModeBlue: #dce9f4;
+
+// Dark mode
+
+// Typography
+$sansSerifMain: 'Open Sans', sans-serif;
