--- a/src/Utilities/_variables.scss
+++ b/src/Utilities/_variables.scss
@@ -7,6 +7,7 @@ $lightModeGrey20: rgba(138, 180, 211, 0.2);
 $lightModeWhite: rgba(255, 255, 255, 1);
 $lightModeWhite50: rgba(255, 255, 255, 0.5);
 $lightModeBlue: #dce9f4;
+$lightModeInputBG: rgba(81, 155, 225, 0.2);
 
 // Dark mode
 
