--- a/src/Styles/HomePage/HomePage.css
+++ b/src/Styles/HomePage/HomePage.css
@@ -1,6 +1,7 @@
 .home__container {
   width: 100%;
   height: 100vh;
+  max-height: 100vh;
   background-image: url("../../Assets/Images/Light-BG-2.jpg");
   background-size: cover;
   background-position: center;
@@ -12,7 +13,7 @@
   display: -ms-flexbox;
   display: flex;
   gap: 32px;
-  padding: 80px 120px;
+  padding: 150px 80px 80px;
 }
 
 .home__container .home__main .home__left-section {
@@ -20,7 +21,7 @@
   -webkit-box-flex: 25%;
       -ms-flex: 25%;
           flex: 25%;
-  background-color: rgba(255, 255, 255, 0.5);
+  height: 100%;
 }
 
 .home__container .home__main .home__middle-section {
@@ -35,6 +36,6 @@
   -webkit-box-flex: 25%;
       -ms-flex: 25%;
           flex: 25%;
-  background-color: rgba(255, 255, 255, 0.5);
+  height: 100%;
 }
 /*# sourceMappingURL=HomePage.css.map */
