--- a/src/Styles/Navbar/Navbar.css
+++ b/src/Styles/Navbar/Navbar.css
@@ -13,6 +13,10 @@
   background-color: rgba(255, 255, 255, 0.5);
   -webkit-backdrop-filter: blur(16px);
           backdrop-filter: blur(16px);
+  position: absolute;
+  top: 0;
+  z-index: 50;
+  width: 100%;
 }
 
 .navbar__container .navbar__logo {
