--- a/src/Utilities/_variables.scss
+++ b/src/Utilities/_variables.scss
@@ -12,4 +12,7 @@ $lightModeInputBG: rgba(81, 155, 225, 0.2);
 // Dark mode
 
 // Typography
-$sansSerifMain: 'Open Sans', sans-serif;
+$sansSerifMain: "Open Sans", sans-serif;
+
+// Spacing
+$homeGap: 32px;
