--- a/src/Styles/ProfilePreview/ProfilePreview.css
+++ b/src/Styles/ProfilePreview/ProfilePreview.css
@@ -8,7 +8,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: rgba(255, 255, 255, 0.5);
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 .profilepreview__container .profilepreview__banner {
