--- a/src/Styles/Suggested/Suggested.css
+++ b/src/Styles/Suggested/Suggested.css
@@ -12,7 +12,7 @@
 }
 
 .suggested__container h3 {
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   color: #8ab5d3;
 }
 
