--- a/src/Utilities/_variables.scss
+++ b/src/Utilities/_variables.scss
@@ -1,5 +1,6 @@
 $mainBlue: #47b8ff;
 $secondaryBlue: #87dbff;
+$unfollowRed: #f73946;
 
 // Light mode
 $lightModeGrey: #8ab5d3;
@@ -12,7 +13,7 @@ $lightModeInputBG: rgba(81, 155, 225, 0.2);
 // Dark mode
 
 // Typography
-$sansSerifMain: "Open Sans", sans-serif;
+$sansSerifMain: "DM Sans", sans-serif;
 
 // Spacing
 $homeGap: 32px;
