--- a/src/Styles/HomePage/HomePage.css
+++ b/src/Styles/HomePage/HomePage.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vh;
   max-height: 100vh;
+  overflow: hidden;
   background-image: url("../../Assets/Images/Light-BG-2.jpg");
   background-size: cover;
   background-position: center;
