--- a/src/Styles/HomePage/HomePage.scss
+++ b/src/Styles/HomePage/HomePage.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100vh;
   max-height: 100vh;
-  // overflow: hidden;
+  overflow: hidden;
   background-image: url("../../Assets/Images/Light-BG-2.jpg");
   background-size: cover;
   background-position: center;
