--- a/src/Styles/Navbar/Navbar.css
+++ b/src/Styles/Navbar/Navbar.css
@@ -56,7 +56,7 @@
 .navbar__container nav ul li {
   list-style: none;
   color: #8ab5d3;
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-weight: 500;
   -webkit-transition: color 0.2s ease;
   transition: color 0.2s ease;
