--- a/src/Styles/RightSidebar/RightSidebar.css
+++ b/src/Styles/RightSidebar/RightSidebar.css
@@ -7,5 +7,6 @@
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 32px;
+  height: 100%;
 }
 /*# sourceMappingURL=RightSidebar.css.map */
