--- a/src/Styles/SignUpPage/SignUpPage.css
+++ b/src/Styles/SignUpPage/SignUpPage.css
@@ -1,5 +1,5 @@
 .signup__container {
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   width: 100%;
   height: 100vh;
   background-image: url("../../Assets/Images/Auth-BG.jpg");
