--- a/src/Styles/SuggestedProfile/SuggestedProfile.scss
+++ b/src/Styles/SuggestedProfile/SuggestedProfile.scss
@@ -42,4 +42,22 @@
       cursor: pointer;
     }
   }
+
+  .suggestedprofile__following {
+    color: white;
+    font-family: $sansSerifMain;
+    font-weight: 500;
+    background: $mainBlue;
+    border: 2px solid $mainBlue;
+    border-radius: 150px;
+    padding: 4px 18px;
+    transition: color 0.2s ease, background 0.2s ease, border 0.2s ease;
+
+    &:hover {
+      background: $unfollowRed;
+      border: 2px solid $unfollowRed;
+      color: white;
+      cursor: pointer;
+    }
+  }
 }
