--- a/src/Styles/TweetBox/TweetBox.css
+++ b/src/Styles/TweetBox/TweetBox.css
@@ -10,25 +10,25 @@
 
 .tweetbox__container ::-webkit-input-placeholder {
   color: #8ab5d3;
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-size: 20px;
 }
 
 .tweetbox__container :-ms-input-placeholder {
   color: #8ab5d3;
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-size: 20px;
 }
 
 .tweetbox__container ::-ms-input-placeholder {
   color: #8ab5d3;
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-size: 20px;
 }
 
 .tweetbox__container ::placeholder {
   color: #8ab5d3;
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-size: 20px;
 }
 
@@ -50,7 +50,7 @@
   padding: 12px;
   width: 87%;
   min-height: 40px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-size: 18px;
 }
 
@@ -158,7 +158,7 @@
   border-radius: 100px;
   color: white;
   font-weight: 700;
-  font-family: "Open Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   -webkit-transition: -webkit-transform 0.2s ease;
   transition: -webkit-transform 0.2s ease;
   transition: transform 0.2s ease;
