--- a/src/Styles/ProfileTweets/ProfileTweets.scss
+++ b/src/Styles/ProfileTweets/ProfileTweets.scss
@@ -1,1 +1,8 @@
 @import "../../Utilities/variables";
+
+.profiletweets__container {
+    display: flex;
+    flex-direction: column;
+    gap: $homeGap;
+    width: 50%;
+}
