--- a/src/Styles/Navbar/Navbar.css
+++ b/src/Styles/Navbar/Navbar.css
@@ -9,8 +9,8 @@
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  padding: 24px 96px;
-  background-color: rgba(255, 255, 255, 0.5);
+  padding: 18px 96px;
+  background-color: rgba(255, 255, 255, 0.9);
   -webkit-backdrop-filter: blur(16px);
           backdrop-filter: blur(16px);
   position: absolute;
@@ -110,6 +110,10 @@
      object-fit: contain;
   overflow: hidden;
   border-radius: 100px;
+}
+
+.navbar__container .navbar__search-avatar .navbar__avatar:hover {
+  cursor: pointer;
 }
 
 .navbar__container .navbar__search-avatar .navbar__avatar img {
