--- a/src/Styles/ProfilePage/ProfilePage.scss
+++ b/src/Styles/ProfilePage/ProfilePage.scss
@@ -1,22 +1,30 @@
 @import "../../Utilities/variables";
 
 .profilepage__container {
-  width: 100%;
-
-  .profilepage__banner {
-    height: 550px;
     width: 100%;
-    overflow: hidden;
-    object-fit: cover;
-    object-position: center;
-    display: flex;
-    align-items: center;
+    background-image: url("../../Assets/Images/Light-BG-2.jpg");
+    background-size: cover;
+    background-position: center;
 
-    img {
-      width: 100%;
-      //   display: block;
-      //   margin-left: auto;
-      //   margin-right: auto;
+    .profilepage__banner {
+        height: 550px;
+        width: 100%;
+        overflow: hidden;
+        object-fit: cover;
+        object-position: center;
+        display: flex;
+        align-items: center;
+
+        img {
+            width: 100%;
+            //   display: block;
+            //   margin-left: auto;
+            //   margin-right: auto;
+        }
     }
-  }
+
+    .profilepage__content {
+        display: flex;
+        gap: $homeGap;
+    }
 }
