--- a/src/Styles/Navbar/Navbar.scss
+++ b/src/Styles/Navbar/Navbar.scss
@@ -13,6 +13,15 @@
     z-index: 50;
     width: 100%;
 
+    // .navbar__dropdown {
+    //     position: absolute;
+    //     // top: 120%;
+    //     // top: 200px;
+    //     margin-top: 200px;
+    //     right: 5%;
+    //     z-index: 100;
+    // }
+
     .navbar__logo {
         max-height: 24px;
     }
