--- a/src/Styles/SignUpModal/SignUpModal.css
+++ b/src/Styles/SignUpModal/SignUpModal.css
@@ -19,19 +19,19 @@
 }
 
 .signup-modal__container ::-webkit-input-placeholder {
-  color: #8ab5d3;
+  color: #5379a6;
 }
 
 .signup-modal__container :-ms-input-placeholder {
-  color: #8ab5d3;
+  color: #5379a6;
 }
 
 .signup-modal__container ::-ms-input-placeholder {
-  color: #8ab5d3;
+  color: #5379a6;
 }
 
 .signup-modal__container ::placeholder {
-  color: #8ab5d3;
+  color: #5379a6;
 }
 
 .signup-modal__container .signup-modal__form-button {
