--- a/src/Styles/LoginPage/LoginPage.css
+++ b/src/Styles/LoginPage/LoginPage.css
@@ -1,5 +1,5 @@
 .login__container {
-  font-family: "DM Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   width: 100%;
   height: 100vh;
   background-image: url("../../Assets/Images/Auth-BG.jpg");
