--- a/src/Styles/ProfileDetails/ProfileDetails.scss
+++ b/src/Styles/ProfileDetails/ProfileDetails.scss
@@ -7,6 +7,7 @@
     font-family: $sansSerifMain;
     color: $lightModeGrey;
     width: 25%;
+    margin-top: 75px;
 
     .profiledetails__user-profile {
         display: flex;
