--- a/src/Styles/Suggested/Suggested.css
+++ b/src/Styles/Suggested/Suggested.css
@@ -12,8 +12,8 @@
 }
 
 .suggested__container h3 {
-  font-family: "DM Sans", sans-serif;
-  color: #8ab5d3;
+  font-family: "Roboto", sans-serif;
+  color: #5379a6;
 }
 
 .suggested__container .suggested__profiles {
