--- a/src/Styles/SuggestedProfile/SuggestedProfile.css
+++ b/src/Styles/SuggestedProfile/SuggestedProfile.css
@@ -8,8 +8,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: "DM Sans", sans-serif;
-  color: #8ab5d3;
+  font-family: "Roboto", sans-serif;
+  color: #5379a6;
 }
 
 .suggestedprofile__container .suggestedprofile__details {
@@ -42,7 +42,7 @@
 
 .suggestedprofile__container .suggestedprofile__follow {
   color: #47b8ff;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   background: none;
   border: 2px solid #47b8ff;
@@ -60,7 +60,7 @@
 
 .suggestedprofile__container .suggestedprofile__following {
   color: white;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   background: #47b8ff;
   border: 2px solid #47b8ff;
