--- a/src/Styles/Tweet/Tweet.css
+++ b/src/Styles/Tweet/Tweet.css
@@ -1,6 +1,6 @@
 .tweet__container {
-  font-family: "DM Sans", sans-serif;
-  color: #8ab5d3;
+  font-family: "Roboto", sans-serif;
+  color: #5379a6;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,6 +43,10 @@
 
 .tweet__container .tweet__message {
   padding: 0px 32px;
+}
+
+.tweet__container .tweet__message p {
+  line-height: 20px;
 }
 
 .tweet__container .tweet__image {
@@ -89,5 +93,35 @@
       -ms-flex-align: center;
           align-items: center;
   gap: 12px;
+}
+
+.tweet__container .tweet__interactions .tweet__interactions-icons .tweet__interactions-icon-container .tweet__button {
+  -webkit-transition: color 0.2s ease;
+  transition: color 0.2s ease;
+}
+
+.tweet__container .tweet__interactions .tweet__interactions-icons .tweet__interactions-icon-container .tweet__button:hover {
+  cursor: pointer;
+}
+
+.tweet__container .tweet__interactions .tweet__interactions-icons .tweet__interactions-icon-container #tweet-reply:hover {
+  color: #47b8ff;
+}
+
+.tweet__container .tweet__interactions .tweet__interactions-icons .tweet__interactions-icon-container #tweet-like:hover {
+  color: #f8525d;
+}
+
+.tweet__container .tweet__interactions .tweet__interactions-icons .tweet__interactions-icon-container #tweet-dislike:hover {
+  color: #a17df7;
+}
+
+.tweet__container .tweet__interactions .tweet__interactions-icons .tweet__interactions-icon-container p {
+  font-size: 14px;
+}
+
+.tweet__container .tweet__interactions .tweet__interactions-options #tweet-options:hover {
+  color: #47b8ff;
+  cursor: pointer;
 }
 /*# sourceMappingURL=Tweet.css.map */
