--- a/src/Styles/Avatar/Avatar.css
+++ b/src/Styles/Avatar/Avatar.css
@@ -3,6 +3,8 @@
      object-fit: contain;
   border-radius: 200px;
   overflow: hidden;
+  -webkit-box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+          box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
 }
 
 .avatar__container img {
