--- a/src/Styles/Avatar/Avatar.scss
+++ b/src/Styles/Avatar/Avatar.scss
@@ -2,7 +2,8 @@
     object-fit: contain;
     border-radius: 200px;
     overflow: hidden;
-    
+    box-shadow: 0px 10px 20px rgba(60, 156, 225, 0.3);
+
     img {
         width: 100%;
     }
