displayed posts from firebase

--- a/src/Styles/Timeline/Timeline.css
+++ b/src/Styles/Timeline/Timeline.css
@@ -29,4 +29,15 @@
   height: 100%;
   overflow-y: scroll;
 }
+
+.timeline__container .timeline__tweets-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 32px;
+}
 /*# sourceMappingURL=Timeline.css.map */
