--- a/src/Styles/Timeline/Timeline.scss
+++ b/src/Styles/Timeline/Timeline.scss
@@ -1,29 +1,35 @@
 @import "../../Utilities/variables";
 
 ::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: $lightModeWhite50;
+    background: $lightModeWhite50;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: $lightModeGrey;
+    background: $lightModeGrey;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+    background: #555;
 }
 
 .timeline__container {
-  display: flex;
-  flex-direction: column;
-  gap: $homeGap;
-  //   height: 85vh;
-  height: 100%;
-  overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: $homeGap;
+    //   height: 85vh;
+    height: 100%;
+    overflow-y: scroll;
+
+    .timeline__tweets-container {
+        display: flex;
+        flex-direction: column;
+        gap: $homeGap;
+    }
 }
