--- a/src/Styles/Tweet/Tweet.scss
+++ b/src/Styles/Tweet/Tweet.scss
@@ -20,6 +20,19 @@
             display: flex;
             align-items: center;
             gap: 16px;
+
+            .tweet__details-avatar {
+                width: 60px;
+                height: 60px;
+                overflow: hidden;
+                border-radius: 100px;
+
+                img {
+                    max-height: 100%;
+                    max-width: 100%;
+                    object-fit: contain;
+                }
+            }
         }
 
         .tweet__details-time {
@@ -40,7 +53,7 @@
     .tweet__image {
         width: 100%;
         overflow: hidden;
-        height: 300px;
+        height: 400px;
 
         img {
             width: 100%;
