--- a/src/Styles/Tweet/Tweet.css
+++ b/src/Styles/Tweet/Tweet.css
@@ -12,6 +12,7 @@
   background: rgba(255, 255, 255, 0.5);
   -webkit-backdrop-filter: blur(16px);
           backdrop-filter: blur(16px);
+  position: relative;
 }
 
 .tweet__container .tweet__details {
@@ -87,6 +88,13 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 0px 32px 8px;
+  position: relative;
+}
+
+.tweet__container .tweet__interactions .tweet__options-button {
+  position: absolute;
+  right: 0;
+  bottom: 48px;
 }
 
 .tweet__container .tweet__interactions .tweet__interactions-icons {
