--- a/src/Styles/Tweet/Tweet.scss
+++ b/src/Styles/Tweet/Tweet.scss
@@ -9,6 +9,7 @@
     gap: 12px;
     background: $lightModeWhite50;
     backdrop-filter: blur(16px);
+    position: relative;
 
     .tweet__details {
         display: flex;
@@ -67,6 +68,13 @@
         justify-content: space-between;
         align-items: center;
         padding: 0px 32px 8px;
+        position: relative;
+
+        .tweet__options-button {
+            position: absolute;
+            right: 0;
+            bottom: 48px;
+        }
 
         .tweet__interactions-icons {
             display: flex;
