added ability to reply to tweets

--- a/src/Utilities/_variables.scss
+++ b/src/Utilities/_variables.scss
@@ -16,6 +16,7 @@ $lightModeInputBG: rgba(81, 155, 225, 0.2);
 
 // Dark mode
 $darkModeGrey: #111d34;
+$darkModeGrey50: rgba(17, 29, 52, 0.5);
 $darkModeTweet: #192846;
 $darkModeText: #d2ddf9;
 $darkModeSubtext: #d2ddf9;
