--- a/src/Styles/Tweet/Tweet.css
+++ b/src/Styles/Tweet/Tweet.css
@@ -12,7 +12,10 @@
   background: rgba(255, 255, 255, 0.5);
   -webkit-backdrop-filter: blur(16px);
           backdrop-filter: blur(16px);
-  position: relative;
+}
+
+.tweet__container .tweet__reply-box {
+  width: 100%;
 }
 
 .tweet__container .tweet__details {
