--- a/src/Styles/Tweet/Tweet.scss
+++ b/src/Styles/Tweet/Tweet.scss
@@ -9,7 +9,19 @@
     gap: 12px;
     background: $lightModeWhite50;
     backdrop-filter: blur(16px);
-    position: relative;
+    // position: relative;
+
+    .tweet__reply-box {
+        // position: absolute;
+        // top: 0;
+        // left: 0;
+        // background: $darkModeGrey50;
+        width: 100%;
+        // height: 100vh;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
+    }
 
     .tweet__details {
         display: flex;
